# algebra-plugins

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
array/: CMakeLists.txt
array/include/algebra/definitions/: std_array.hpp
array/include/plugins/: array_defs.hpp
benchmarks/: CMakeLists.txt
benchmarks/algebra/src/: benchmark_getter.cpp  benchmark_matrix.cpp  benchmark_transform3.cpp  benchmark_vector.cpp
benchmarks/algebra/src/vc_soa/: vc_soa_getter.cpp  vc_soa_matrix.cpp  vc_soa_transform3.cpp  vc_soa_vector.cpp
benchmarks/array/: array_getter.cpp  array_matrix.cpp  array_transform3.cpp  array_vector.cpp
benchmarks/common/src/: benchmark_getter.cpp  benchmark_matrix.cpp  benchmark_transform3.cpp  benchmark_vector.cpp
benchmarks/eigen/: eigen_getter.cpp  eigen_matrix.cpp  eigen_transform3.cpp  eigen_vector.cpp
benchmarks/fastor/: fastor_getter.cpp  fastor_matrix.cpp  fastor_transform3.cpp  fastor_vector.cpp
benchmarks/vc_aos/: vc_aos_getter.cpp  vc_aos_matrix.cpp  vc_aos_transform3.cpp  vc_aos_vector.cpp
benchmarks/vc_soa/: vc_soa_getter.cpp  vc_soa_matrix.cpp  vc_soa_transform3.cpp  vc_soa_vector.cpp
core/include/: CMakeLists.txt
core/include/array/: CMakeLists.txt
core/include/eigen/: CMakeLists.txt
core/include/smatrix/: CMakeLists.txt
core/include/vc/: CMakeLists.txt
core/include/vecmem/: CMakeLists.txt
eigen/: CMakeLists.txt
eigen/include/algebra/definitions/: eigen.hpp
eigen/include/plugins/: eigen_defs.hpp
frontend/: CMakeLists.txt
frontend/array/: CMakeLists.txt
frontend/array/include/algebra/: array.hpp
frontend/array_cmath/: CMakeLists.txt
frontend/array_cmath/include/algebra/: array_cmath.hpp
frontend/array_vc/: CMakeLists.txt
frontend/array_vc/include/algebra/: array_vc.hpp
frontend/eigen/: CMakeLists.txt
frontend/eigen/include/algebra/: eigen.hpp
frontend/eigen_cmath/: CMakeLists.txt
frontend/eigen_cmath/include/algebra/: eigen_cmath.hpp
frontend/eigen_eigen/: CMakeLists.txt
frontend/eigen_eigen/include/algebra/: eigen_eigen.hpp
frontend/eigen_generic/: CMakeLists.txt
frontend/eigen_generic/include/algebra/: eigen_generic.hpp
frontend/fastor/: CMakeLists.txt
frontend/fastor/include/algebra/: fastor.hpp
frontend/fastor_fastor/: CMakeLists.txt
frontend/fastor_fastor/include/algebra/: .eigen_eigen.hpp.swp  fastor_fastor.hpp
frontend/smatrix/: CMakeLists.txt
frontend/smatrix/include/algebra/: smatrix.hpp
frontend/smatrix_cmath/: CMakeLists.txt
frontend/smatrix_cmath/include/algebra/: smatrix_cmath.hpp
frontend/smatrix_generic/: CMakeLists.txt
frontend/smatrix_smatrix/: CMakeLists.txt
frontend/vc_aos/: CMakeLists.txt
frontend/vc_aos_generic/: CMakeLists.txt
frontend/vc_cmath/: CMakeLists.txt
frontend/vc_soa/: CMakeLists.txt
frontend/vc_vc/: CMakeLists.txt
frontend/vecmem_cmath/: CMakeLists.txt
frontend/vecmem_vc/: CMakeLists.txt
generic/: CMakeLists.txt
generic/include/algebra/: generic.hpp
include/array/: CMakeLists.txt
include/smatrix/: CMakeLists.txt
math/: CMakeLists.txt
math/cmath/: CMakeLists.txt
math/common/: CMakeLists.txt
math/eigen/: CMakeLists.txt
math/fastor/: CMakeLists.txt
math/generic/: CMakeLists.txt
math/smatrix/: CMakeLists.txt
math/vc/: CMakeLists.txt
math/vc_aos/: CMakeLists.txt
math/vc_soa/: CMakeLists.txt
smatrix/: CMakeLists.txt
smatrix/include/plugins/: smatrix_defs.hpp
storage/: CMakeLists.txt
storage/array/: CMakeLists.txt
storage/cmath/: CMakeLists.txt
storage/common/: CMakeLists.txt
storage/eigen/: CMakeLists.txt
storage/fastor/: CMakeLists.txt
storage/smatrix/: CMakeLists.txt
storage/std_array/: CMakeLists.txt
storage/vc/: CMakeLists.txt
storage/vc_aos/: CMakeLists.txt
storage/vc_soa/: CMakeLists.txt
storage/vecmem/: CMakeLists.txt
storage/vecmem_array/: CMakeLists.txt
tests/: CMakeLists.txt
tests/accelerator/: CMakeLists.txt
tests/accelerator/common/: test_basics_base.hpp  test_basics_functors.hpp
tests/accelerator/cuda/: CMakeLists.txt  array.cu  array_cmath.cpp  array_cmath.cu  array_cmath_kernels.cu  array_cmath_kernels.hpp  cuda_test.cuh  eigen.cu  eigen_cmath.cu  eigen_eigen.cu  eigen_generic.cu  execute_cuda_test.cuh  vc_cmath.cu  vecmem_cmath.cu
tests/accelerator/sycl/: CMakeLists.txt  array.sycl  array_cmath.cpp  array_cmath.sycl  eigen.sycl  eigen_cmath.sycl  eigen_eigen.sycl  eigen_generic.sycl  vecmem_cmath.sycl
tests/array/: CMakeLists.txt  array.cpp  array_algebra_plugin.cpp  array_cmath.cpp  array_vc.cpp
tests/benchmarks/: CMakeLists.txt
tests/benchmarks/eigen/: CMakeLists.txt
tests/common/: CMakeLists.txt  execute_host_test.hpp  test_base.hpp  test_basics.hpp  test_device_basics.hpp  test_host_basics.hpp  test_plugin.inl  test_types.hpp
tests/eigen/: CMakeLists.txt  eigen.cpp  eigen_algebra_plugin.cpp  eigen_cmath.cpp  eigen_eigen.cpp  eigen_generic.cpp
tests/fastor/: fastor.cpp  fastor_fastor.cpp
tests/smatrix/: CMakeLists.txt  smatrix.cpp  smatrix_algebra_plugin.cpp  smatrix_cmath.cpp  smatrix_generic.cpp  smatrix_smatrix.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/array/: CMakeLists.txt  array_algebra_plugin.cpp  array_single_layer_components.cpp
tests/unit_tests/cpu/: CMakeLists.txt
tests/unit_tests/device/: CMakeLists.txt
tests/unit_tests/eigen/: CMakeLists.txt  eigen_algebra_plugin.cpp  eigen_core.cpp  eigen_read_detector.cpp
tests/unit_tests/smatrix/: CMakeLists.txt  smatrix_algebra_plugin.cpp  smatrix_cylinder_intersection.cpp  smatrix_read_detector.cpp
tests/unit_tests/vc/: CMakeLists.txt  vc_array_algebra_plugin.cpp
tests/unit_tests/vecmem/: CMakeLists.txt  vecmem_array_algebra_plugin.cpp
tests/vc/: vc_cmath.cpp  vc_vc.cpp
tests/vc_aos/: vc_aos.cpp  vc_aos_generic.cpp  vc_cmath.cpp
tests/vc_array/: CMakeLists.txt  vc_array_algebra_plugin.cpp
tests/vc_soa/: vc_soa.cpp
tests/vecmem/: vecmem_cmath.cpp  vecmem_vc.cpp
tests/vecmem_array/: CMakeLists.txt  vecmem_array_algebra_plugin.cpp
utils/: CMakeLists.txt
vc_array/: CMakeLists.txt
vecmem_array/: CMakeLists.txt
(+365 files in other folders)
